@@ -7,25 +7,38 @@ use ExtUtils::MakeMaker;
 use Cwd;
 use File::Spec;
 
-# minimum required version of Gtk2 with which we can work.
-my $req_gtk2_ver = '0.90';
+# minimum required version of dependancies we need to build
+our %build_reqs = (
+	'perl-ExtUtils-Depends'   => '0.1',
+	'perl-ExtUtils-PkgConfig' => '0.1',
+	'perl-Glib'               => '1.00rc1',
+	'perl-Gtk2'               => '1.00rc1',
+	'Gnome'                  => '2.0.0.0',
+);
+
+# minimum required version of dependancies we need to run
+our %runtime_reqs = (
+	'Gnome'	=> undef,
+);
 
 # Writing a fake Makefile ensures that CPAN will pick up the correct
 # dependencies and install them.
 unless (eval "use ExtUtils::Depends;"
            . "use Glib::PkgConfig;"
+	   . "use Gtk2::CodeGen;"
            # just seeing if Glib is available isn't enough, make sure
            # it's recent enough, too 
-           . "use Gtk2 $req_gtk2_ver;"
-           . "use Gtk2::CodeGen;"
+           . "use Glib '$build_reqs{'perl-Glib'}';"
+           . "use Gtk2 '$build_reqs{'perl-Gtk2'}';"
            . "1") {
    warn "$@\n";
    WriteMakefile(
          PREREQ_FATAL => 1,
          PREREQ_PM    => {
-            Glib::              => $req_gtk2_ver, # keep this in sync
-            Gtk2::              => $req_gtk2_ver, # keep this in sync
-            ExtUtils::Depends:: => 0.1,
+            Glib::                => $build_reqs{'perl-Glib'},
+            Gtk2::                => $build_reqs{'perl-Gtk2'},
+            ExtUtils::Depends::   => $build_reqs{'perl-ExtUtils-Depends'},
+            ExtUtils::PkgConfig:: => $build_reqs{'perl-ExtUtils-PkgConfig'},
          },
    );
    exit 1; # not reached
@@ -35,6 +48,8 @@ unless (eval "use ExtUtils::Depends;"
 # in theory, getting what we need to build libgnomeui should 
 # also get everything we need for libgnome.
 %pkgcfg = Glib::PkgConfig->find ('libgnomeui-2.0');
+
+$runtime_reqs{Gnome} = $pkgcfg{modversion};
 
 mkdir 'build', 0777;
 
@@ -89,15 +104,34 @@ sub postamble
 		      rpms/SPECS rpms/SRPMS};
 	my $cwd = getcwd();
 
+	my %subs = (
+		'VERSION' => '$(VERSION)',
+		'SOURCE' => '$(DISTNAME)-$(VERSION).tar.gz',
+		'GNOME_RUN' => $runtime_reqs{'Gnome'},
+		'GNOME' => $build_reqs{'Gnome'},
+		'PERL_EXTUTILS_DEPENDS' => 
+			$build_reqs{'perl-ExtUtils-Depends'},
+		'PERL_EXTUTILS_PKGCONFIG' => 
+			$build_reqs{'perl-ExtUtils-PkgConfig'},
+		'PERL_GLIB' => $build_reqs{'perl-Glib'},
+		'PERL_GTK' => $build_reqs{'perl-Gtk2'},
+	);
+	
+	my $substitute = '$(PERL) -npe \''.join('; ', map {
+			"s/\\\@$_\\\@/$subs{$_}/g";
+		} keys %subs).'\'';
+
 	"
 realclean ::
-	-rm -Rf build perl-\$(DISTNAME).spec
+	-\$(RM_RF) build perl-\$(DISTNAME).spec
 
 rpms/:
 	-mkdir @dirs
 
+SUBSTITUTE=$substitute
+
 perl-\$(DISTNAME).spec: perl-\$(DISTNAME).spec.in \$(VERSION_FROM) Makefile
-	sed -e \"s/\@VERSION\@/\$(VERSION)/g\" -e \"s/\@SOURCE\@/\$(DISTNAME)-\$(VERSION).tar.gz/g\" \$< > \$@
+	\$(SUBSTITUTE) \$+ > \$@
 
 dist-rpms: Makefile dist perl-\$(DISTNAME).spec rpms/
 	cp \$(DISTNAME)-\$(VERSION).tar.gz rpms/SOURCES/
